--- a/about.css
+++ b/about.css
@@ -158,9 +158,9 @@ header.masthead {
   padding-top: 150px;
   padding-bottom: 100px;
   color: white;
-  background:  #008080;
-  background: -webkit-gradient(linear, right top, left top, from(#008080), to(#111E6C));
-  background: linear-gradient(to left, #008080, #111E6C);
+  background:  #00A86B;
+  background: -webkit-gradient(linear, right top, left top, from(#00A86B), to(#006994));
+  background: linear-gradient(to left, #00A86B, #006994);
 }
 
 header.masthead .header-content {
@@ -209,14 +209,14 @@ section {
 }
 
 #download {
-  background-color: aliceblue;
+  background-color: pink;
 }
 
 section.container {
-  background-color: aliceblue;
+  background-color: pink;
 }
 section.download.bg-primary text-center {
-  background-color: aliceblue;
+  background-color: pink;
 }
 
 section.download h2 {
@@ -275,7 +275,7 @@ section.features .feature-item {
 
 section.features .device-container {
   margin-bottom: 100px;
-  background-color: teal;
+  background-color: pink;
 }
 
 @media (min-width: 992px) {
@@ -288,7 +288,7 @@ section.features .feature-item {
   padding-top: 50px;
   padding-bottom: 50px;
   text-align: center;
-  background-color: aliceblue;
+  background-color: pink;
 }
 
 section.features .feature-item h3 {
@@ -299,7 +299,7 @@ section.features .feature-item i {
   font-size: 80px;
   display: block;
   margin-bottom: 15px;
-  background-color: aliceblue;
+  background-color: pink;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -307,7 +307,7 @@ section.features .feature-item i {
 section.cta {
   position: relative;
   padding: 250px 0;
-  background-color: royalblue;
+  background-color: pink;
   background-position: center;
   background-size: cover;
 }
@@ -328,6 +328,7 @@ section.cta .cta-content h2 {
 @media (min-width: 768px) {
   section.cta .cta-content h2 {
     font-size: 80px;
+
   }
 }
 
@@ -337,11 +338,12 @@ section.cta .overlay {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: #01796F;
 }
 
 section.contact {
   text-align: center;
+  background-color: aliceblue;
 }
 
 section.contact h2 {
@@ -417,7 +419,9 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
 }
 
 .bg-primary {
-  background: aliceblue;
+  background:#D0F0C0;
+  background: -webkit-gradient(linear, left top, left bottom, from(#D0F0C0), to(#D0F0C0));
+  background: linear-gradient(#D0F0C0, #D0F0C0);
 }
 
 .text-primary {
