--- a/cph.css
+++ b/cph.css
@@ -1,5 +1,3 @@
-
-
 /*!
  * Start Bootstrap - New Age v5.0.0 (https://startbootstrap.com/template-overviews/new-age)
  * Copyright 2013-2018 Start Bootstrap
@@ -160,9 +158,9 @@ header.masthead {
   padding-top: 150px;
   padding-bottom: 100px;
   color: white;
-  background:  #B0E0E6;
-  background: -webkit-gradient(linear, right top, left top, from(#B0E0E6), to(#0000CD));
-  background: linear-gradient(to left, #B0E0E6, #0000CD);
+  background:  #FF7F50;
+  background: -webkit-gradient(linear, right top, left top, from( #FFEFD5), to(#FF7F50));
+  background: linear-gradient(to left,  #FFEFD5, #FF7F50);
 }
 
 header.masthead .header-content {
@@ -211,14 +209,14 @@ section {
 }
 
 #download {
-  background-color: aliceblue;
+  background-color: pink;
 }
 
 section.container {
-  background-color: aliceblue;
+  background-color: pink;
 }
 section.download.bg-primary text-center {
-  background-color: aliceblue;
+  background-color: pink;
 }
 
 section.download h2 {
@@ -272,12 +270,12 @@ section.features .device-container,
 section.features .feature-item {
   max-width: 325px;
   margin: 0 auto;
-  background-color: teal;
+  background-color: #DC143C;
 }
 
 section.features .device-container {
   margin-bottom: 100px;
-  background-color: teal;
+  background-color: pink;
 }
 
 @media (min-width: 992px) {
@@ -290,7 +288,7 @@ section.features .feature-item {
   padding-top: 50px;
   padding-bottom: 50px;
   text-align: center;
-  background-color: aliceblue;
+  background-color: pink;
 }
 
 section.features .feature-item h3 {
@@ -301,7 +299,7 @@ section.features .feature-item i {
   font-size: 80px;
   display: block;
   margin-bottom: 15px;
-  background-color: aliceblue;
+  background-color: pink;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -309,7 +307,7 @@ section.features .feature-item i {
 section.cta {
   position: relative;
   padding: 250px 0;
-  background-color: royalblue;
+  background-color: pink;
   background-position: center;
   background-size: cover;
 }
@@ -330,6 +328,7 @@ section.cta .cta-content h2 {
 @media (min-width: 768px) {
   section.cta .cta-content h2 {
     font-size: 80px;
+
   }
 }
 
@@ -339,11 +338,13 @@ section.cta .overlay {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: #8B0000;
+
 }
 
 section.contact {
   text-align: center;
+  background-color: aliceblue;
 }
 
 section.contact h2 {
@@ -352,7 +353,7 @@ section.contact h2 {
 }
 
 section.contact h2 i {
-  color: #dd4b39;
+  color: white;
 }
 
 section.contact ul.list-social {
@@ -419,9 +420,9 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
 }
 
 .bg-primary {
-  background: #87CEFA;
-  background: -webkit-gradient(linear, left top, left bottom, from(#87CEFA), to(#87CEFA));
-  background: linear-gradient(#87CEFA, #87CEFA);
+  background:#FFEFD5;
+  background: -webkit-gradient(linear, left top, left bottom, from(#FFEFD5), to(#FFEFD5));
+  background: linear-gradient(#FFEFD5, #FFEFD5);
 }
 
 .text-primary {
